ブランチ削除機能

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -808,8 +808,6 @@
      <string>&amp;File</string>
     </property>
     <addaction name="action_open_existing_working_copy"/>
-    <addaction name="separator"/>
-    <addaction name="action_test"/>
    </widget>
    <widget class="QMenu" name="menu_View">
     <property name="title">
@@ -863,6 +861,12 @@
     <addaction name="action_repo_jump"/>
     <addaction name="action_repo_checkout"/>
    </widget>
+   <widget class="QMenu" name="menuExperiment">
+    <property name="title">
+     <string>Experiment</string>
+    </property>
+    <addaction name="action_test"/>
+   </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_View"/>
    <addaction name="menu_Edit"/>
@@ -871,6 +875,7 @@
    <addaction name="menuTag"/>
    <addaction name="menu_Window"/>
    <addaction name="menu_Help"/>
+   <addaction name="menuExperiment"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QDockWidget" name="dockWidget_log">
