--- a/src/SearchFromGitHubDialog.ui
+++ b/src/SearchFromGitHubDialog.ui
@@ -63,6 +63,12 @@
    </item>
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::ExpandingFieldsGrow</enum>
+     </property>
+     <property name="labelAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
      <item row="0" column="0">
       <widget class="QRadioButton" name="radioButton_ssh">
        <property name="text">
