--- a/src/CloneDialog.ui
+++ b/src/CloneDialog.ui
@@ -47,8 +47,15 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="2">
+     <item row="1" column="1">
       <widget class="QLineEdit" name="lineEdit_working_dir"/>
+     </item>
+     <item row="1" column="2">
+      <widget class="QPushButton" name="pushButton_browse">
+       <property name="text">
+        <string>Browse</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
