--- a/src/JumpDialog.ui
+++ b/src/JumpDialog.ui
@@ -72,6 +72,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QCheckBox" name="checkBox_checkout">
+       <property name="text">
+        <string>&amp;Checkout</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
