--- a/src/SetRemoteUrlDialog.ui
+++ b/src/SetRemoteUrlDialog.ui
@@ -55,7 +55,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="lineEdit_url"/>
+       <widget class="RepositoryLineEdit" name="lineEdit_url"/>
       </item>
       <item row="1" column="2">
        <widget class="QPushButton" name="pushButton_test">
@@ -88,14 +88,14 @@
      <item>
       <widget class="QPushButton" name="pushButton">
        <property name="text">
-        <string>&amp;Apply</string>
+        <string>OK</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
-        <string>&amp;Close</string>
+        <string>Cancel</string>
        </property>
       </widget>
      </item>
@@ -104,6 +104,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>RepositoryLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>RepositoryLineEdit.h</header>
+  </customwidget>
   <customwidget>
    <class>RemoteRepositoriesTableWidget</class>
    <extends>QTableWidget</extends>
