--- a/src/ExperimentDialog.ui
+++ b/src/ExperimentDialog.ui
@@ -15,6 +15,20 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QRadioButton" name="radioButton_github">
+     <property name="text">
+      <string>GitHub</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QRadioButton" name="radioButton_gravatar">
+     <property name="text">
+      <string>Gravatar</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="label">
