--- a/src/SettingsDialog.ui
+++ b/src/SettingsDialog.ui
@@ -70,6 +70,25 @@
          </item>
         </layout>
        </widget>
+       <widget class="QWidget" name="page_network">
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="SettingNetworkForm" name="widget" native="true"/>
+         </item>
+        </layout>
+       </widget>
        <widget class="QWidget" name="page_example">
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <property name="leftMargin">
@@ -137,6 +156,12 @@
    <class>SettingExampleForm</class>
    <extends>QWidget</extends>
    <header>SettingExampleForm.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SettingNetworkForm</class>
+   <extends>QWidget</extends>
+   <header>SettingNetworkForm.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
