コミッターアイコンの表示を設定で切り替えられるようにした

--- a/src/SettingNetworkForm.ui
+++ b/src/SettingNetworkForm.ui
@@ -39,6 +39,20 @@
     <widget class="QLineEdit" name="lineEdit_proxy_server"/>
    </item>
    <item>
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBox_get_committer_icon">
+     <property name="text">
+      <string>Get committer's icon</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
